--- a/css/style.css
+++ b/css/style.css
@@ -115,3 +115,16 @@ height: 70px;
 .hamburger-menu-icon{
   display: none;
 }
+
+
+
+.half-width{
+  width:40%;
+  float: left;
+  margin-left:5%;
+  padding-left:2%;
+}
+.half-width img{
+  width:100%;
+  height: 500px;
+}
